--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "react-dom": "latest"
   },
   "devDependencies": {
-    "@types/node": "22.15.21",
-    "@types/react": "19.1.5",
+    "@types/node": "^22.1.0",
+    "@types/react": "^18.2.6",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.2",
