--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "latest",
-    "react": "latest",
-    "react-dom": "latest"
+    "autoprefixer": "^10.4.14",
+    "next": "13.4.0",
+    "postcss": "^8.4.24",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.0.4"
   },
   "devDependencies": {
-    "@types/node": "^22.1.0",
-    "@types/react": "^18.2.6",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.3.2",
-    "typescript": "^5.0.0"
+    "@types/react": "^18.0.38",
+    "@types/node": "^20.2.5"
   }
 }
