--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.14",
+    "framer-motion": "^12.23.6",
     "next": "13.4.0",
+    "next-seo": "^6.8.0",
     "postcss": "^8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -18,7 +20,7 @@
     "typescript": "^5.0.4"
   },
   "devDependencies": {
-    "@types/react": "^18.0.38",
-    "@types/node": "^20.2.5"
+    "@types/node": "^20.2.5",
+    "@types/react": "^18.0.38"
   }
 }
