--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "autoprefixer": "^10.4.14",
     "framer-motion": "^12.23.7",
+    "lucide-react": "^0.562.0",
     "next": "13.4.0",
     "postcss": "^8.4.24",
     "react": "18.2.0",
@@ -19,9 +20,10 @@
     "typescript": "^5.0.4"
   },
   "devDependencies": {
+    "@next/swc-linux-x64-gnu": "^13.4.0",
     "@types/node": "^20.2.5",
     "@types/react": "^18.0.38",
-    "eslint": "9.39.2",
-    "eslint-config-next": "16.1.4"
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^13.4.0"
   }
 }
