--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "devDependencies": {
     "@types/node": "^20.2.5",
-    "@types/react": "^18.0.38"
+    "@types/react": "^18.0.38",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^13.4.0"
   }
 }
