--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "postcss": "^8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "^3.3.2",
-    "typescript": "^5.0.4"
+    "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
     "@types/node": "^20.2.5",
     "@types/react": "^18.0.38",
     "eslint": "^8.57.0",
-    "eslint-config-next": "^13.4.0"
+    "eslint-config-next": "^13.4.0",
+    "typescript": "^5.1.6"
   }
 }
