--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+NEXT_PUBLIC_SITE_URL=https://www.poweredbyia.com
 SITE_URL=https://www.poweredbyia.com
 WHATSAPP_URL=https://wa.me/34911528753
 CONTACT_EMAIL=poweredbyiaoficial@gmail.com
