chore: block /prompts and exclude from sitemap

--- a/.vercel/project.json
+++ b/.vercel/project.json
@@ -1,1 +1,1 @@
-{"projectId":"prj_yQHuv7zkBBhl3bvfuAbnfSJHiyIK","orgId":"team_jlx2bUxGqXrEz0J9N7EYcM9e"}
+{"projectId":"prj_fJJEUmsxHUMReDZyu3E2CsEkLayz","orgId":"team_jlx2bUxGqXrEz0J9N7EYcM9e","projectName":"launchlabv1"}
