codex(ops): add canonical scope guard for sister store
Codex-Change: yes

Codex-Owner: codex

Codex-Scope: docs/SCOPE_CANONICO.md, scripts/scope-check.sh, package.json, docs/_Quarantine/00-INDEX.md

Codex-Reason: reducir confusion y definir scope canonico

Codex-Testing: No probado.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ops:parity:prod": "bash scripts/parity-prod.sh",
     "preflight": "bash scripts/preflight.sh",
     "resume": "bash scripts/handoff/obsidian_sync.sh && bash scripts/handoff/refresh-start-here.sh && bash scripts/handoff/resume_contextpack.sh",
+    "scope:check": "bash scripts/scope-check.sh",
     "dev:safe": "bash scripts/dev_safe.sh"
   },
   "dependencies": {
