codex(data): add product image mapping + checks script | 2026-02-14 05:10 Europe/Madrid

--- a/.gitignore
+++ b/.gitignore
@@ -166,3 +166,6 @@ public/mo/media/
 public/mo/
 public/video/*.mp4
 public/video/*.vtt
+!public/mo/
+!public/mo/products/
+!public/mo/products/*.svg
