--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dev:safe": "bash scripts/dev_safe.sh"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.95.3",
     "autoprefixer": "^10.4.14",
     "framer-motion": "^12.23.7",
     "lucide-react": "^0.563.0",
